alignment issue fixed

--- a/employeemanagementsystem/src/components/employee/employee.css
+++ b/employeemanagementsystem/src/components/employee/employee.css
@@ -1,7 +1,6 @@
 .newEmployeeButton {
     float: right;
     width: fit-content;
-    padding: 10px;
     margin: 20px 0 20px 20px;
     border-radius: 8px;
 
